Fix dark mode button

--- a/src/index.css
+++ b/src/index.css
@@ -37,8 +37,7 @@
 }
 
 
-/* Middle */
-.content {
+ .content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -150,8 +149,12 @@ label {
   user-select: none;
 }
 
-.dark {
+.dark22 {
   opacity: 0.5;
+}
+
+.box {
+  box-sizing: border-box;
 }
 
 .mark {
@@ -162,45 +165,38 @@ label {
 .time {
   color: black;
 }
-/* -------- Switch Styles ------------*/
-[type="checkbox"] {
-  display: none;
-}
-/* Toggle */
-[type="checkbox"]:checked + .app .toggle {
+[type="checkbox"]:checked + .box .toggle {
   -webkit-transform: translateX(100%);
   -ms-transform: translateX(100%);
   transform: translateX(100%);
   background-color: #34323d;
 }
 
-[type="checkbox"]:checked + .app .dark {
+[type="checkbox"]:checked + .box .dark22 {
   opacity: 1;
   color: white;
 }
 
-[type="checkbox"]:checked + .app .light {
+[type="checkbox"]:checked + .box .light {
   opacity: 1;
   color: white;
 }
-/* App */
-[type="checkbox"]:checked + .app .phone {
+[type="checkbox"]:checked + .box .phone {
   background-color: #26242e;
   color: white;
 }
-/* Circle */
-[type="checkbox"]:checked + .app .crescent {
+[type="checkbox"]:checked + .box .crescent {
   -webkit-transform: scale(1);
   -ms-transform: scale(1);
   transform: scale(1);
   background: #26242e;
 }
 
-[type="checkbox"]:checked + .app .circle {
+[type="checkbox"]:checked + .box .circle {
   background-position: 100% 100%;
 }
 
-[type="checkbox"]:checked + .app .main-circle {
+[type="checkbox"]:checked + .box .main-circle {
   background: linear-gradient(40deg, #8983f7, #a3dafb 70%);
 }
 
@@ -208,24 +204,23 @@ label {
   color: white;
 }
 
-[type="checkbox"]:checked + .app .body .phone .menu .time {
+[type="checkbox"]:checked + .box .body .phone .menu .time {
   color: white;
 }
 
-[type="checkbox"]:checked + .app .body .phone .menu .icons .network {
+[type="checkbox"]:checked + .box .body .phone .menu .icons .network {
   border-color: transparent transparent white transparent;
 }
 
-[type="checkbox"]:checked + .app .body .phone .menu .icons .battery {
+[type="checkbox"]:checked + .box .body .phone .menu .icons .battery {
   background-color: white;
 }
 
-[type="checkbox"]:checked + .app .body {
+[type="checkbox"]:checked + .box .body {
   border-radius: 40px;
 }
 
 .menu {
-  /*   background-color: blue; */
   font-size: 80%;
   opacity: 0.4;
   padding: 0.8rem 1.8rem;
